--- a/app/package.json
+++ b/app/package.json
@@ -49,6 +49,7 @@
     "wicket": "^1.3.6"
   },
   "devDependencies": {
+    "@mdi/js": "^6.5.95",
     "@vue/cli-plugin-babel": "^4.3.0",
     "@vue/cli-plugin-e2e-cypress": "^4.5.12",
     "@vue/cli-plugin-eslint": "^4.3.0",
